--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,14 @@
-<router-outlet>
-  <a routerLink = "/cadastro">Cadastro</a>
-</router-outlet>
+<!-- src/app/app.component.html -->
+
+<nav>
+  <ul>
+    <li><a routerLink="/aluno-cadastro">Cadastrar Aluno</a></li>
+    <li><a routerLink="/aluno-lista">Lista Aluno</a></li>
+    <li><a routerLink="/curso-cadastro">Cadastrar Curso</a></li>
+    <li><a routerLink="/disciplina-cadastro">Cadastrar Disciplina</a></li>
+    <li><a routerLink="/professor-cadastro">Cadastrar Professor</a></li>   
+  
+  </ul>
+</nav>
+
+<router-outlet></router-outlet>
